Configs/Istio/DestinationRuleArticleservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: articleservice
spec:
  host: articleservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
