Configs/Istio/VirtualServiceArticleservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: articleservice-vs
spec:
  hosts:
  - articleservice
  http:
  - route:
    - destination:
        host: articleservice
        subset: v1
      weight: 90
    - destination:
        host: articleservice
        subset: v2
      weight: 10
